--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@
 }
 
 .profile-photo {
-    min-height: 10rem;
-    max-width: 10rem;
+    height: 10rem;
+    width: 10rem;
     border: 0.1rem solid black;
-    background-color: red;
+    background-color: rgb(0, 0, 0);
 }
