--- a/style.css
+++ b/style.css
@@ -14,8 +14,6 @@
 .profile-photo {
     height: 10rem;
     width: 10rem;
-    border: 0.1rem solid black;
-    background-color: rgb(0, 0, 0);
 }
 
 .cover-buttons {
@@ -23,3 +21,15 @@
     border: 0.3rem solid white;
     margin: auto;
 }
+
+.main-content {
+    margin-top: 5rem;
+    min-height: 70rem;
+}
+
+.main-content-secondary {
+    margin-top: 5rem;
+    min-height: 70rem;
+    width: 50%;
+}
+
